fix header text breaking on small screen

--- a/theme.css
+++ b/theme.css
@@ -77,6 +77,22 @@ d-appendix {
 /*-- Additional custom styles --*/
 /* Add any additional CSS rules below                      */
 
+.break,
+p,
+ul,
+ol,
+dl,
+blockquote,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    word-wrap: break-word;
+    word-break: break-word;
+}
+
 body {
     background-color: #F5F5F5; 
 }
